plugins {
	id 'java'
	id 'jacoco'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'br.com.wallet'
version = '0.0.1-SNAPSHOT'

dependencyManagement {
	imports {
		mavenBom "org.springframework.modulith:spring-modulith-bom:2.1.0"
	}
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(26)
	}
}

repositories {
	mavenCentral()
}


ext {
	springVersion = "7.0.8"
	openApiVersion = "3.1.0"
	jnatsVersion = "2.26.2"
	lettuceVersion = "7.7.0.RELEASE"
	otlpAppenderVersion = "2.28.1-alpha"
	nettyVersion = "4.2.17.Final"
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'jacoco'
	apply plugin: 'io.spring.dependency-management'

	version = '0.0.1-SNAPSHOT'

	dependencyManagement {
		imports {
			mavenBom "org.springframework.boot:spring-boot-dependencies:4.1.0"
			mavenBom "org.springframework.modulith:spring-modulith-bom:2.1.0"
		}
	}

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(26)
		}
	}

	repositories {
		mavenCentral()
	}

	bootJar {
		enabled = false
	}

	jar {
		enabled = true
	}

	dependencies {
		implementation 'org.springframework.boot:spring-boot-starter'
		implementation 'org.springframework.modulith:spring-modulith-starter-core'
	}
}

bootJar {
	enabled = true
}

dependencies {
	// Project dependencies
	implementation project(':core')
	implementation project(':fraud')

	// Spring Boot Starters for the main application
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-opentelemetry'
	implementation("io.opentelemetry.instrumentation:opentelemetry-logback-appender-1.0:${otlpAppenderVersion}")
	implementation 'org.springframework.boot:spring-boot-starter-jackson'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	
	// Other dependencies
	implementation 'org.springframework:spring-aspects'
	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:${openApiVersion}")
	implementation("io.nats:jnats:${jnatsVersion}")
	implementation("io.lettuce:lettuce-core:${lettuceVersion}")
	implementation("io.netty:netty-transport-native-epoll")
	implementation("io.netty:netty-transport-native-epoll:${nettyVersion}:linux-x86_64")

	// Test dependencies
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	implementation 'org.springframework.boot:spring-boot-webtestclient'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Spring Modulith
	implementation 'org.springframework.modulith:spring-modulith-starter-core'
	testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
	testImplementation 'org.springframework.modulith:spring-modulith-docs'
	implementation 'org.springframework.modulith:spring-modulith-events-api'

	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
	testImplementation 'org.testcontainers:testcontainers-postgresql'

	runtimeOnly 'org.postgresql:postgresql'
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		html.required = true
		csv.required = false
	}
}

jacocoTestCoverageVerification {
	violationRules {
		rule {
			limit {
				minimum = 0.70
			}
		}
	}
}
